--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "webpack-cli": "^4.6.0"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "axios": "^0.21.1",
+    "lodash": "^4.17.21",
+    "on-change": "^3.0.0",
+    "yup": "^0.32.9"
   }
 }
