--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -10,3 +10,5 @@ parserOptions:
 rules:
   no-console: 0
   import/extensions: 0
+  no-alert: 0
+  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
