--- a/package.json
+++ b/package.json
@@ -33,5 +33,11 @@
     "lodash": "^4.17.21",
     "on-change": "^3.0.0",
     "yup": "^0.32.9"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false,
+    "url": false
   }
 }
