--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "i18next": "^20.3.2",
     "lodash": "^4.17.21",
     "on-change": "^3.0.0",
     "yup": "^0.32.9"
