--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "hexlet educational project 3",
   "private": true,
+  "main": "src/index.js",
   "bin": {
     "rss": "bin/rss.js"
   },
