--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "hexlet education project #3",
   "private": true,
-  "main": "src/app.js",
+  "main": "src/index.js",
   "bin": {
     "rss": "bin/rss.js"
   },
