--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -11,4 +11,5 @@ rules:
   no-console: 0
   import/extensions: 0
   no-alert: 0
+  no-param-reassign: 0
   no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
