--- a/package.json
+++ b/package.json
@@ -19,15 +19,20 @@
   },
   "homepage": "https://github.com/vvvhatislove/frontend-project-lvl3#readme",
   "devDependencies": {
+    "css-loader": "^6.2.0",
     "eslint": "^7.25.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "html-webpack-plugin": "^5.3.1",
+    "style-loader": "^3.1.0",
     "webpack": "^5.36.2",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
     "i18next": "^20.3.2",
     "lodash": "^4.17.21",
     "on-change": "^3.0.0",
