--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/vvvhatislove/frontend-project-lvl3.git"
   },
-  "author": "vvvhatislove",
+  "author": "denivladislav",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/vvvhatislove/frontend-project-lvl3/issues"
